LESS/contact.less
@import "reset";
@import "global";
@import "navigation";
@import "footer";

html {
  height: 100vh;
  div {
    .contactMe {
      display: flex;
      flex-direction: column;
      align-items: left;
      width: 200px;
      a {
        padding: 3%;
        margin-left: 2%;
        display: flex;
        align-items: center;
        font-size: 1.8rem;
        color: black;
        text-decoration: none;
        &:hover {
          text-decoration: underline;
        }
        img {
          margin-left: 2%;
          height: 24px;
          width: 24px;
        }
        h1 {
          padding: 0 3%;
        }
      }
    }
  }
}

